--- a/templates/register.html
+++ b/templates/register.html
@@ -8,6 +8,7 @@
       <label for="inputEmail4">Email</label>
       <input type="email" class="form-control " id="inputEmail4" name="uemail" placeholder="Email">
     </div>
+     {{err}}
     <div class="form-group col-md-6">
       <label >Name</label>
       <input type="text" class="form-control" id="uname"  name="uname" placeholder="Name">
@@ -20,4 +21,5 @@
   </div>
   <button type="submit" class="btn btn-primary">Sign in</button>
 </form>
+{{err1}}
 {% endblock %}
